--- a/ar/index.html
+++ b/ar/index.html
@@ -37,6 +37,11 @@
       html.lt-ie-10 .ie-panel {
         display: block;
       }
+      .col-md-6, .col-lg-5, .post-classic, .box-custom-1{
+        direction: rtl;
+    /* float: right; */
+    text-align: initial;
+      }
     </style>
   </head>
   <body>
@@ -91,12 +96,12 @@
                     <!--Brand--><a class="brand" href="index-2.html"
                       ><img
                         class="brand-logo-dark"
-                        src="../images/logo-default-269x100.png"
+                        src="../images/logo-ar.png"
                         alt=""
                         width="134"
                         height="50" /><img
                         class="http://netsharp.biz/1/brand-logo-light"
-                        src="../images/logo-inverse-269x100.png" 
+                        src="../images/logo-ar.png" 
                         style="width: 120%;"
                         alt=""
                         width="134"
@@ -212,15 +217,14 @@
                     <h1 style="    font-size: 36px;"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1000,"delay":1000}'
                     >
-                      JE CUISINE, JE M’AMUSE
+أطبخ وأستمتع
                     </h1>
                     <p
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      Je suis Youm with mady et je vis à Casablanca. L’une de
-                      mes passions est de cuisiner sans aucune connaissance de
-                      la technique des professionnels.
+                      أنا  يوم مع مادي، أسكن الدار البيضاء وولوعة بفنون الطهي دون دراسة التقنيات.
+
                     </p>
                     <!--p
                       class="postitle"
@@ -256,15 +260,16 @@
                     <h1
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1000,"delay":1000}'
                     >
-                      MES PLATS
+                      مرحبا في مطبخي
+
 
                     </h1>
                     <p
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      A travers, www.youmwithmady.com, je me donne un plaisir de
-                      vous ouvrir la porte de ma cuisine.
+                      من خلال موقع www.youmwithmady.com ،  يسعدني أن أفتح لكم  باب مطبخي.
+
                     </p>
                     <!--p
                       class="postitle"
@@ -300,13 +305,14 @@
                     <h1
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1000,"delay":1000}'
                     >
-                      MES RECETTES
+                      وصفاتي
+
                     </h1>
                     <p
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      Sont réalisées dans la joie, la bonne humeur et aussi la bonne musique.
+                      محضرة في جو ممتع ومنسمة بموسيقى مرحة. 
 
                     </p>
                     <!--p
@@ -343,13 +349,15 @@
                     <h1
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1000,"delay":1000}'
                     >
-                      Ma cuisine
+                       قائمة طعامي
+
                     </h1>
                     <p
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      Saine, facile, délicieuse et rapide.
+                       صحية، شهية، سهلة و سريعة.
+
                     </p>
                     <!--p
                       class="postitle"
@@ -398,13 +406,18 @@
             <div class="col-xl-5 col-lg-6">
               <div class="box-custom-1">
                 <h2>
-                  <b>Mon Univers</b> <br /><br />
+                  <b>          عالم مطبخي
+</b> <br /><br />
                 </h2>
                 <ul class="">
-                  <li><img src="../images/tajine.png"/> La vraie cuisine est une forme d’art.</li><br />
-                  <li><img src="../images/tajine.png"/> La décoration n’a pas de code.</li><br />
-                  <li><img src="../images/tajine.png"/> La liberté est de mise à table.</li><br />
-                  <li><img src="../images/tajine.png"/> La concrétisation d’un plat imaginé.</li><br />
+                  <li><img src="../images/tajine.png"/> فني، ذوقي وإبداعي.
+</li><br />
+                  <li><img src="../images/tajine.png"/> جمالية التقديم في التميز.
+</li><br />
+                  <li><img src="../images/tajine.png"/> الحرية المطلقة في مزيج الأذواق.
+</li><br />
+                  <li><img src="../images/tajine.png"/> قوة التخيل في إنجاز الوصفات.
+</li><br />
                 </ul>
                 
               </div>
@@ -420,7 +433,8 @@
         <div class="container">
           <div class="text-center">
             <h2><b><span style="font-size: 38px;
-    font-weight: bold;">3</span> raisons pour cuisiner</b></h2>
+    font-weight: bold;">3</span>  أسئلة ؟
+</b></h2>
           </div>
           <div
             class="row row-50 post-classic-counter justify-content-lg-between justify-content-center"
@@ -428,20 +442,25 @@
             <div class="col-lg-4 col-sm-6">
               <div class="post-classic novi-bg bg-secondary-1">
                 <h3 class="post-classic-title">
-                  Pourquoi  je cuisine? <br />
+                  لماذا أطبخ ؟
+ <br />
                 </h3>
                 <p class="post-classic-text">
-                  - Pour manger sain.<br/>
-                  - Pour réaliser mes propres recettes. 
+                  - للأكل بطريقة صحية.
+<br/>
+                  - لتحضير وصفاتي الخاصة.
+ 
 
                 </p>
               </div>
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="post-classic novi-bg bg-secondary-2">
-                <h3 class="post-classic-title">Style de cuisine?</h3>
+                <h3 class="post-classic-title">أسلوب طبخي؟
+</h3>
                 <p class="post-classic-text">
-                  - Une cuisine simple,  amusante,  savoureuse, avec peu d’ingrédients, se basant plus sur les légumes que les viandes, avec un temps de cuisson réduit. 
+                  - بسيط، ممتع، مسلي، سريع و يرتكز على الخضار أكثر من اللحوم.
+ 
 
                 </p>
               </div>
@@ -449,11 +468,13 @@
             <div class="col-lg-4 col-sm-6">
               <div class="post-classic novi-bg bg-secondary-3">
                 <h3 class="post-classic-title">
-                  Pourquoi je partage?
+لماذا أتقاسم معكم ؟
                 </h3>
                 <p class="post-classic-text">
-                  - Pour témoigner que nous pouvons manger sain, bon marché et dans l’élégance malgré le manque de temps.<br/>
-                  - Pour vous donner l’envie de cuisiner et non vous apprendre à cuisiner.
+                  - لكي تكون  شهادة بأننا نستطيع الأكل بطريقة سليمة ، سهلة ، غير مكلفة و راقية رغم قلة الوقت.
+<br/>
+                  - لا أشارككم لتعليمكم الطبخ ولكن لتحفيزكم على الطبخ.
+
                 </p>
               </div>
             </div>
@@ -475,11 +496,12 @@
                       <div
                         class="icon novi-icon icon-lg linearicons-leaf"
                       ></div>
-                      <h3 class="box-icon-title">Mes ingrédients de base</h3>
+                      <h3 class="box-icon-title">المكونات الأساسية
+</h3>
                     </div>
                     <p class="box-icon-text">
-                      Les légumes, les fruits, les graines, les plantes aromatiques
-                      et les épices.
+                      الخضر، الفواكه، زيت الزيتون، ا لنباتات العطرية والطبية والتوابل.
+
                     </p>
                   </div>
                 </div>
@@ -490,12 +512,13 @@
                         class="icon novi-icon icon-lg linearicons-leaf"
                       ></div>
                       <h3 class="box-icon-title">
-                        Mes ingrédients les + appréciés
+                       المكونات المفضلة
+
                       </h3>
                     </div>
                     <p class="box-icon-text">
-                      Les poissons blancs, les fromages, les légumineuses et les
-                      fruits secs.
+                      الأسماك، الأجبان، القطاني و الفواكه الجافة.
+
                     </p>
                   </div>
                 </div>
@@ -506,11 +529,13 @@
                         class="icon novi-icon icon-lg linearicons-leaf"
                       ></div>
                       <h3 class="box-icon-title">
-                        Mes ingrédients les + consommés
+                        المكونات الأكثر استعمالا
+
                       </h3>
                     </div>
                     <p class="box-icon-text">
-                     L'ail, le gingembre frais, le citron et le persil.
+                        - الثوم، الحامض، الزنجبيل الطري و البقدونس.
+
                     </p>
                   </div>
                 </div>
@@ -520,10 +545,11 @@
                       <div
                         class="icon novi-icon icon-lg linearicons-leaf"
                       ></div>
-                      <h3 class="box-icon-title">Mes ingrédients <img src="../images/no.png"></h3>
+                      <h3 class="box-icon-title">ا لمكونات
+ <img src="../images/no.png"></h3>
                     </div>
                     <p class="box-icon-text">
-                      Le sel, le sucre et les produits industrialisés.
+الملح، السكر، المواد الدهنية و المصنعة.
                     </p>
                   </div>
                 </div>
@@ -794,7 +820,7 @@ function showDivs(n) {
       <div class="" style="background-color:#001453;padding-top: 10px;">
       <div class="row text-center py-5">
         <div class=" col-md-12 m-t-20">
-       <h1> <span style="color:white;">Contact</span></h1><br/>
+       <h1> <span style="color:white;">للتواصل</span></h1><br/>
 
 
         <ul class="list-inline list-social-icons mb-0">
