--- a/en/index.html
+++ b/en/index.html
@@ -91,12 +91,12 @@
                     <!--Brand--><a class="brand" href="index-2.html"
                       ><img
                         class="brand-logo-dark"
-                        src="../images/logo-default-269x100.png"
+                        src="../images/logo-en.png"
                         alt=""
                         width="134"
                         height="50" /><img
                         class="http://netsharp.biz/1/brand-logo-light"
-                        src="../images/logo-inverse-269x100.png" 
+                        src="../images/logo-en.png" 
                         style="width: 120%;"
                         alt=""
                         width="134"
@@ -212,15 +212,14 @@
                     <h1 style="    font-size: 36px;"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1000,"delay":1000}'
                     >
-                      JE CUISINE, JE M’AMUSE
+                      I cook, I enjoy 
                     </h1>
                     <p
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      Je suis Youm with mady et je vis à Casablanca. L’une de
-                      mes passions est de cuisiner sans aucune connaissance de
-                      la technique des professionnels.
+                       I am Youm with mady and I live in Casablanca. One of my passions is cooking without any technical professional knowledge.
+
                     </p>
                     <!--p
                       class="postitle"
@@ -256,15 +255,15 @@
                     <h1
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1000,"delay":1000}'
                     >
-                      MES PLATS
+WHAT’S UP?
 
                     </h1>
                     <p
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      A travers, www.youmwithmady.com, je me donne un plaisir de
-                      vous ouvrir la porte de ma cuisine.
+                      Through, www.youmwithmady.com, I invite you to visit my cooking’s world.  
+
                     </p>
                     <!--p
                       class="postitle"
@@ -300,13 +299,14 @@
                     <h1
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1000,"delay":1000}'
                     >
-                      MES RECETTES
+                      MY RECIPES
+
                     </h1>
                     <p
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      Sont réalisées dans la joie, la bonne humeur et aussi la bonne musique.
+                      Prepared in the joy and mixed with a lovely music.
 
                     </p>
                     <!--p
@@ -343,13 +343,13 @@
                     <h1
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1000,"delay":1000}'
                     >
-                      Ma cuisine
+MY MENU
                     </h1>
                     <p
                       class="big"
                       data-swiper-anime='{"animation":"swiperContentRide","duration":1100,"delay":1100}'
                     >
-                      Saine, facile, délicieuse et rapide.
+                      Healthy, tasty, Easy and Quick.
                     </p>
                     <!--p
                       class="postitle"
@@ -398,13 +398,17 @@
             <div class="col-xl-5 col-lg-6">
               <div class="box-custom-1">
                 <h2>
-                  <b>Mon Univers</b> <br /><br />
+                  <b>MY UNIVERSE</b> <br /><br />
                 </h2>
                 <ul class="">
-                  <li><img src="../images/tajine.png"/> La vraie cuisine est une forme d’art.</li><br />
-                  <li><img src="../images/tajine.png"/> La décoration n’a pas de code.</li><br />
-                  <li><img src="../images/tajine.png"/> La liberté est de mise à table.</li><br />
-                  <li><img src="../images/tajine.png"/> La concrétisation d’un plat imaginé.</li><br />
+                  <li><img src="../images/tajine.png"/>Cooking is an art.
+</li><br />
+                  <li><img src="../images/tajine.png"/> Decorating is no coded.
+</li><br />
+                  <li><img src="../images/tajine.png"/>  Enjoying freedom in the kitchen.
+</li><br />
+                  <li><img src="../images/tajine.png"/>Imagination and execution of my recipes.
+</li><br />
                 </ul>
                 
               </div>
@@ -420,7 +424,8 @@
         <div class="container">
           <div class="text-center">
             <h2><b><span style="font-size: 38px;
-    font-weight: bold;">3</span> raisons pour cuisiner</b></h2>
+    font-weight: bold;">3</span> REASONS FOR COOKING
+</b></h2>
           </div>
           <div
             class="row row-50 post-classic-counter justify-content-lg-between justify-content-center"
@@ -428,20 +433,25 @@
             <div class="col-lg-4 col-sm-6">
               <div class="post-classic novi-bg bg-secondary-1">
                 <h3 class="post-classic-title">
-                  Pourquoi  je cuisine? <br />
+                  Why I cook?
+ <br />
                 </h3>
                 <p class="post-classic-text">
-                  - Pour manger sain.<br/>
-                  - Pour réaliser mes propres recettes. 
+                  - To eat healthy.
+<br/>
+                  - To make my own recipes.
+ 
 
                 </p>
               </div>
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="post-classic novi-bg bg-secondary-2">
-                <h3 class="post-classic-title">Style de cuisine?</h3>
+                <h3 class="post-classic-title">My style?
+</h3>
                 <p class="post-classic-text">
-                  - Une cuisine simple,  amusante,  savoureuse, avec peu d’ingrédients, se basant plus sur les légumes que les viandes, avec un temps de cuisson réduit. 
+                  - Simple, healthy, yummy, based more on vegetables than meats, with a reduced cooking time.   
+
 
                 </p>
               </div>
@@ -449,11 +459,13 @@
             <div class="col-lg-4 col-sm-6">
               <div class="post-classic novi-bg bg-secondary-3">
                 <h3 class="post-classic-title">
-                  Pourquoi je partage?
+                  Why I share?
+
                 </h3>
                 <p class="post-classic-text">
-                  - Pour témoigner que nous pouvons manger sain, bon marché et dans l’élégance malgré le manque de temps.<br/>
-                  - Pour vous donner l’envie de cuisiner et non vous apprendre à cuisiner.
+                  - To testify that we can eat healthy and prepare tasty cheap meals despite the lack of time.
+<br/>
+                  - To make you  feel like cooking and not to learn you how to cook.
                 </p>
               </div>
             </div>
@@ -475,11 +487,12 @@
                       <div
                         class="icon novi-icon icon-lg linearicons-leaf"
                       ></div>
-                      <h3 class="box-icon-title">Mes ingrédients de base</h3>
+                      <h3 class="box-icon-title">My basic ingredients
+</h3>
                     </div>
                     <p class="box-icon-text">
-                      Les légumes, les fruits, les graines, les plantes aromatiques
-                      et les épices.
+                      Vegetables, fruits, olive oil, aromatic plants & spices. 
+
                     </p>
                   </div>
                 </div>
@@ -490,12 +503,12 @@
                         class="icon novi-icon icon-lg linearicons-leaf"
                       ></div>
                       <h3 class="box-icon-title">
-                        Mes ingrédients les + appréciés
+My favorite ingredients
                       </h3>
                     </div>
                     <p class="box-icon-text">
-                      Les poissons blancs, les fromages, les légumineuses et les
-                      fruits secs.
+                      Fish, cheese, leguminous &  dried fruits.
+
                     </p>
                   </div>
                 </div>
@@ -506,11 +519,13 @@
                         class="icon novi-icon icon-lg linearicons-leaf"
                       ></div>
                       <h3 class="box-icon-title">
-                        Mes ingrédients les + consommés
+                       My most consumed ingredients
+
                       </h3>
                     </div>
                     <p class="box-icon-text">
-                     L'ail, le gingembre frais, le citron et le persil.
+                     Garlic, lemon, fresh ginger & parsley.
+
                     </p>
                   </div>
                 </div>
@@ -520,10 +535,12 @@
                       <div
                         class="icon novi-icon icon-lg linearicons-leaf"
                       ></div>
-                      <h3 class="box-icon-title">Mes ingrédients <img src="../images/no.png"></h3>
+                      <h3 class="box-icon-title">My  ingredients
+ <img src="../images/no.png"></h3>
                     </div>
                     <p class="box-icon-text">
-                      Le sel, le sucre et les produits industrialisés.
+                      Salt, sugar, fats, processed food.
+
                     </p>
                   </div>
                 </div>
